[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniengine"
version = "0.1.0"
description = "A minimal LLM serving engine for educational purposes"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
bench = [
    "numpy",
    "tqdm",
]

[project.scripts]
miniengine = "miniengine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
